--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 8081
+spring:
+  redis:
+    host: 192.168.31.65
+    port: 6379
+  session:
+    store-type: redis
+    timeout: 3600
+#    redis:
+#      namespace: login_user
